docs: restructure README with independent CLI and Dashboard sections
Separate CLI and Agent Dashboard into visually distinct sections with
br dividers. Remove redundant feature lists. Add command table, real
output examples for report/histo/gcutil, and streamlined agent config.